--- a/Estate.html
+++ b/Estate.html
@@ -109,7 +109,7 @@
 </head>
 <header>
 
- <img src="images/image14 (1).png" >
+ <img src="Images/image14 (1).png" >
         
         <h1>Estate Real Estate</h1>
         <p>Your trusted partner in finding the perfect property</p>
@@ -155,7 +155,7 @@
         <h2>Our Properties</h2>
         <div class="property-listing">
             <div class="property">
-                <img src="images/image11 (1).jpg" alt="Property 1">
+                <img src="Images/image11 (1).jpg" alt="Property 1">
                 <div class="details">
                     <h3>Luxury Villa</h3>
                     <p>Location: Beverly Hills</p>
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="property">
-                <img src="images/image12 (1).jpg" alt="Property 2">
+                <img src="Images/image12 (1).jpg" alt="Property 2">
                 <div class="details">
                     <h3>Modern Apartment</h3>
                     <p>Location: Downtown</p>
@@ -173,7 +173,7 @@
                 </div>
             </div>
             <div class="property">
-                <img src="images/image13 (1).jpg" alt="Property 3">
+                <img src="Images/image13 (1).jpg" alt="Property 3">
                 <div class="details">
                     <h3>Country House</h3>
                     <p>Location: Aspen</p>
